[releng] Support setting heap space from environment variables in dmk.sh