@@ -178,12 +178,14 @@ then
 		mkdir -p "$TMP_DIR"
 		
 		#Added awt.headless - http://mail-archives.apache.org/mod_mbox/poi-user/200705.mbox/%3C15719338671.20070504144714@dinom.ru%3E
-        JAVA_OPTS="	$JAVA_OPTS \
-        			-Xms12g \
-       		        -Xmx12g \
+        SO_JAVA_OPTS="-Xms16g \
+                    -Xmx16g \
                     -XX:+AlwaysPreTouch \
                     -Xss1m \
                     -Xloggc:$KERNEL_HOME/`date +%F_%H%M-%S`-gc.log \
+                    -XX:+UseConcMarkSweepGC \
+                    -XX:CMSInitiatingOccupancyFraction=75 \
+                    -XX:+UseCMSInitiatingOccupancyOnly \
                     -XX:+PrintGCDetails \
 					-XX:+PrintGCDateStamps \
 					-XX:+PrintGCApplicationStoppedTime \
@@ -201,10 +203,11 @@ then
                     -Djava.awt.headless=true \
                     -XX:+AlwaysLockClassLoader \
                     -Dosgi.classloader.type=nonparallel \
-                    -Djdk.security.defaultKeySize=DSA:1024"
+                    -Djdk.security.defaultKeySize=DSA:1024 \
+					$SO_JAVA_OPTS"
 
 		cd "$KERNEL_HOME"; exec $JAVA_EXECUTABLE \
-			$JAVA_OPTS \
+			$SO_JAVA_OPTS \
 			$DEBUG_OPTS \
 			$JMX_OPTS \
 			-XX:+HeapDumpOnOutOfMemoryError \
